<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_settings"
        android:title="@string/title_salary"
        android:orderInCategory="100"
        />
    <item android:id="@+id/action_settings1"
        android:title="@string/title_converter_meter"
        android:orderInCategory="100"
        />
    <item android:id="@+id/action_settings2"
        android:title="@string/qualification"
        android:orderInCategory="100"
        />
    <item android:id="@+id/action_settings3"
        android:title="@string/title_capital"
        android:orderInCategory="100"
        />
    <item android:id="@+id/action_settings4"
        android:title="@string/title_distribute"
        android:orderInCategory="100"
        />
</menu>