<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_salary"
                android:id="@+id/textView"
                android:textSize="20sp"
                android:textColor="#6070eb"
                android:layout_margin="10dp"
                android:gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_name_employed"
                android:hint="@string/name_employed"
                android:layout_margin="10dp"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:minLines="2"
                ></EditText>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_salary_base"
                android:hint="@string/salary_base"
                android:layout_margin="10dp"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:minLines="3"
                ></EditText>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_hourse_worked"
                android:hint="@string/hourse_worked"
                android:layout_margin="10dp"
                android:inputType="number"
                android:maxLength="7"
                android:minLines="3"
                ></EditText>
            <View
                android:layout_height="2dp"
                android:layout_width="match_parent"
                android:background="@android:color/holo_red_dark"
                android:layout_margin="10dp"
                ></View>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_calculate"
                android:text="@string/btn_calculate"
                android:layout_margin="30dp">


            </Button>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="Data salary"
                android:textColor="@android:color/holo_red_dark"
                android:layout_margin="20dp"
                android:gravity="center"
                android:id="@+id/text_data_salary"/>

        </LinearLayout>


</RelativeLayout>