<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_distribute"
            android:id="@+id/textView"
            android:textSize="20sp"
            android:textColor="#6070eb"
            android:layout_margin="10dp"
            android:gravity="center" />


        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Person One"
                android:id="@+id/textView1"
                android:textSize="14sp"
                android:layout_margin="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Person Two"
                android:id="@+id/textView2"
                android:textSize="14sp"
                android:layout_below="@+id/textView1"
                android:layout_alignLeft="@+id/textView1"
                android:layout_alignStart="@+id/textView1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Person Three"
                android:id="@+id/textView3"
                android:textSize="14sp"
                android:layout_below="@+id/textView2"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:layout_marginTop="18dp" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText1"
                android:layout_alignBottom="@+id/textView1"
                android:hint="@string/age"
                android:layout_centerHorizontal="true"
                android:gravity="center" />
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_alignBottom="@+id/textView2"
                android:hint="@string/age"
                android:layout_centerHorizontal="true"
                android:gravity="center" />
            <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_alignBottom="@+id/textView3"
            android:hint="@string/age"
            android:layout_centerHorizontal="true"
            android:gravity="center" />

        </RelativeLayout>


        <View
            android:layout_height="2dp"
            android:layout_width="match_parent"
            android:background="@android:color/holo_red_dark"
            android:layout_margin="10dp"
            ></View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Money"
            android:id="@+id/textView4"
            android:textSize="14sp"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_marginTop="18dp"
            android:layout_margin="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText4"
            android:layout_alignBottom="@+id/textView3"
            android:hint="@string/money"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_margin="15dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_calculate"
            android:text="@string/btn_calculate"
            android:layout_margin="30dp">


        </Button>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/scrollView"
            android:layout_weight="1.84">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/holo_red_dark"
                android:gravity="center"
                android:id="@+id/text_data_capital"/>
        </ScrollView>

    </LinearLayout>
</RelativeLayout>